static/css/style.css
@import url("/static/css/fonts.css");

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.body {
    width: 256px;
    margin: auto;
    margin-top: 50px;
}

.flex_body {
    display: flex;
    justify-content: center;
    align-items: top;
    height: 100px;
}

.main_header {
    font-family: "Canela Deck", serif;
    text-align: center;
    font-size: 2em;
    /* transform: scale(2); */
    /* padding-bottom: 20px; */
    /* padding-top: 20px; */
}

.body_header {
    font-family: "Canela Deck", serif;
    text-align: center;
    font-size: 35pt;
    margin-bottom: -30px;
    margin-top: -10px;
    /* transform: scale(2); */
    /* padding-bottom: 20px; */
    /* padding-top: 20px; */
}

.body_header_right {
    font-family: "Canela Deck", serif;
    text-align: right;
    font-size: 35pt;
}

.body_text {
    font-family: "Monospace", monospace;
    font-size: 100%;
    line-height: 20px;
    margin-top: 20px;
}

header {
    /* display: flex; */
    /* justify-content: space-between; Optional: add some space between the items */
    align-items: center;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
}

.content {
    width: 512px;
    height: 512px;
    margin: auto;
    margin-top: 90px;
}

.content_body {
    font-family: "Canela Deck", serif;
    font-size: large;
    line-height: 26px;
}

.content_body bottom {
    position: fixed;
    bottom: 10%;
}

.return_link {
    text-align: right;
    margin-top: 30px;
}

.project_row_container {
    width: 95%;
    font-family: "Monospace", monospace;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 5px;
    font-size: 100%;
    padding: 5px;
    outline: 1px solid #8f8f8f;
    /* border-radius: 4px; */
    margin: 10px;
}

.project_row {
    margin: 2px;
    line-height: 26px;
    display: flex;
    justify-content: center;
}

.project_name {
    text-decoration: underline;
    text-decoration-thickness: 1.5px;
    padding-left: 2%;
    font-size: 13pt;
}

.project_thumbnail a {
    display: block; /* Make the whole project clickable */
    text-align: center; /* Center the text */
}

.project_thumbnail img {
    width: 100%; /* Make the image fill the project */
}

a {
    text-decoration: none;
    color: black;
}

/* for index page links only */
.index_links a {
    text-decoration: underline;
    text-decoration-thickness: 1.5px;
    /* font-size: 90%; */
}

.index_row_container {
    width: 130px;
    font-family: "Monospace", monospace;
    font-size: 100%;
    padding: 3%;
    outline: 1px solid #8f8f8f;
    transform: translateX(50%);
}

.left_row_container {
    width: 130px;
    font-family: "Monospace", monospace;
    font-size: 100%;
    padding: 5px;
    outline: 1px solid #8f8f8f;
    margin: 10px;
}

.index_row {
    font-size: 13pt;
    justify-content: left;
    display: flex;
    justify-content: space-between;
}

.index_row a {
    text-decoration: underline;
}

.index_row skill {
    text-decoration: none;
    color: rgb(145, 145, 145);
    font-size: 10pt;
}

/* navigation bar */
nav {
    background-color: #ffffff;
    color: #fff;
    padding: 10px;
    position: fixed;
    width: 100%;
    top: 0;
    height: 60px;
    border-bottom: 1px solid #8f8f8f;
}

nav a {
    color: #222222;
    margin-left: 10px;
    margin-right: 10px;
    text-decoration: none;
}

nav a:hover {
    color: #696969;
}

.nav_header {
    font-family: "Canela Deck", serif;
    font-size: 85%;
    grid-column: 1;
}

.nav_links {
    font-family: "Monospace", monospace;
    text-align: center;
    grid-column: 2;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-menu {
    display: none;
    position: absolute;
    background-color: #ffffff;
    width: auto;
    min-width: 100px;
    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
    z-index: 1;
    border: 1px solid #8f8f8f;
    left: 50%;
    transform: translateX(-50%);
}

.dropdown:hover .dropdown-menu {
    display: block;
}

@media screen and (max-width: 1000px) and (orientation: portrait) {
    .main_header {
        font-size: 2.3em;
    }
    .body {
        width: 80%;
        margin-top: 20%;
    }
    .content_body {
        text-align: center;
    }
    bottom {
        bottom: 20%;
    }
    .index_row_container {
        width: fit-content;
        padding: 10%;
        transform: translateX(-50%);
    }
    .index_row {
        font-size: 15pt;
    }
    .project_row {
        line-height: normal;
    }
    .project_name {
        font-size: 2em;
        padding: 0;
    }
    .content {
        width: 100%;
        margin-top: 5%;
    }

    nav {
        position: fixed;
        top: auto;
        bottom: 0;
        width: 100%;
        height: 60px;
        padding-bottom: 4%;
        font-size: 1.4em;
        border-top: 1px solid #8f8f8f;
    }

    .dropdown:hover .dropdown-menu {
        display: none;
    }

    .nav_header {
        display: none;
    }
}

